--- a/src/templates/bootstrap/selectboxes/form.ejs
+++ b/src/templates/bootstrap/selectboxes/form.ejs
@@ -15,6 +15,8 @@
         <label class="govuk-label govuk-checkboxes__label" for="{{ctx.id}}{{ctx.row}}-{{item.value}}">
             <span>{{ctx.t(item.label)}}</span>
         </label>
+        
+        <strong class="govuk-description">{{item.description}}</strong>
     </div>
     {% }) %}
 </div>
