--- a/src/templates/bootstrap/selectboxes/form.ejs
+++ b/src/templates/bootstrap/selectboxes/form.ejs
@@ -1,22 +1,28 @@
-<div class="govuk-checkboxes">
+<div class="checkboxes">
     {% ctx.values.forEach(function(item) { %}
-    <div class="govuk-checkboxes__item" ref="wrapper">
-        <{{ctx.input.type}}
-        ref="input"
-        {% for (var attr in ctx.input.attr) { %}
-        {{attr}}="{{ctx.input.attr[attr]}} {% if (attr==='class') { %} govuk-checkboxes__input {% } %}"
-        {% } %}
-        value="{{item.value}}"
-        {% if (ctx.value === item.value || (typeof ctx.value === 'object' && ctx.value.hasOwnProperty(item.value) && ctx.value[item.value])) { %}
-        checked=true
-        {% } %}
-        id="{{ctx.id}}{{ctx.row}}-{{item.value}}"
-        >
-        <label class="govuk-label govuk-checkboxes__label" for="{{ctx.id}}{{ctx.row}}-{{item.value}}">
-            <span>{{ctx.t(item.label)}}</span>
-        </label>
-        
-        <strong class="govuk-description">{{item.description}}</strong>
+    <div class="checkbox-panel-item" ref="wrapper">
+
+        <div>
+            <span class="checkbox-panel-title">{{item.label}}</span>
+            <ul>
+                {% item.description.split("\n").forEach(function (desc) {  %}
+                  <li>{{desc}}</li>
+                {% }) %}
+            </ul>
+        </div>
+       <div class="checkbox-panel-checkbox">
+            <{{ctx.input.type}}
+            ref="input"
+            {% for (var attr in ctx.input.attr) { %}
+            {{attr}}="{{ctx.input.attr[attr]}} {% if (attr==='class') { %} govuk-checkboxes__input {% } %}"
+            {% } %}
+            value="{{item.value}}"
+            {% if (ctx.value === item.value || (typeof ctx.value === 'object' && ctx.value.hasOwnProperty(item.value) && ctx.value[item.value])) { %}
+            checked=true
+            {% } %}
+            id="{{ctx.id}}{{ctx.row}}-{{item.value}}"
+            >
+       </div>
     </div>
     {% }) %}
 </div>
