fix(CustomSelectBoxes): re-build

--- a/src/templates/bootstrap/selectboxes/form.ejs
+++ b/src/templates/bootstrap/selectboxes/form.ejs
@@ -1,4 +1,4 @@
-<div class="checkboxes">
+<div class="checkbox-panels">
     {% ctx.values.forEach(function(item) { %}
     <div class="checkbox-panel-item" ref="wrapper">
 
