fix(CustomSelectBoxes): testing component rendering with random stuff

--- a/src/templates/bootstrap/selectboxes/form.ejs
+++ b/src/templates/bootstrap/selectboxes/form.ejs
@@ -12,7 +12,8 @@
         </div>
        <div class="checkbox-panel-checkbox">
             <span class="checkbox-icon">
-                <svg width="30" height="30" viewBox="0 0 24 24" fill="none"><rect x="2.5" y="2.5" width="19" height="19" rx="2.5" fill="#fff" stroke="currentColor"></rect></svg>
+                <strong>hey</strong>
+                <svg width="30" height="30" viewBox="0 0 24 24" fill="none"><rect x="2.5" y="2.5" width="19" height="19" rx="2.5" fill="#ff0000" stroke="currentColor"></rect></svg>
                 <{{ctx.input.type}}
                 ref="input"
                 {% for (var attr in ctx.input.attr) { %}
